fixed colors and added og image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
+      <meta property="og:type"        content="website" />
+      <meta property="og:title"       content="Fareen Khan — Software Engineer" />
+      <meta property="og:description" content="Portfolio of Fareen Khan, a full-stack engineer specializing in React, TypeScript, and Firebase." />
+      <meta property="og:url"         content="https://fareenkhan.vercel.app/" />
+      <meta property="og:image"       content="https://fareenkhan.vercel.app/og-image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fareen Khan</title>
   </head>
