--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="dark">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-      <meta property="og:type"        content="website" />
-      <meta property="og:title"       content="Fareen Khan — Software Engineer" />
-      <meta property="og:description" content="Portfolio of Fareen Khan, a full-stack engineer specializing in React, TypeScript, and Firebase." />
-      <meta property="og:url"         content="https://fareenkhan.vercel.app/" />
-      <meta property="og:image"       content="https://fareenkhan.vercel.app/og-image.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fareen Khan</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" href="/favicon.ico" />
+		<meta property="og:title" content="" />
+    <meta property="og:description" content="Portfolio of Fareen Khan, a full-stack engineer specializing in React, TypeScript, and Firebase." />
+		<meta
+			property="og:image"
+			content="https://fareenkhan.vercel.app/og-image.png"
+		/>
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta property="og:type" content="website" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Fareen Khan</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
+	</body>
 </html>
