--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" href="/favicon.ico" />
 		<meta property="og:title" content="" />
-    <meta property="og:description" content="Portfolio of Fareen Khan, a full-stack engineer specializing in React, TypeScript, and Firebase." />
+		<meta
+			property="og:description"
+			content="Portfolio of Fareen Khan, a full-stack engineer specializing in React, TypeScript, and Firebase."
+		/>
 		<meta
 			property="og:image"
 			content="https://fareenkhan.vercel.app/og-image.png"
@@ -12,6 +15,17 @@
 		<meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="630" />
 		<meta property="og:type" content="website" />
+		
+    <meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="Fareen Khan — Software Engineer" />
+		<meta
+			name="twitter:description"
+			content="Portfolio of Fareen Khan, a full-stack engineer specializing in React, TypeScript, and Firebase."
+		/>
+		<meta
+			name="twitter:image"
+			content="https://fareenkhan.vercel.app/og-image.png"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Fareen Khan</title>
 	</head>
